sql/hive/src/test/resources/ql/src/test/queries/negative/invalid_list_index.q
FROM src_thrift
INSERT OVERWRITE TABLE dest1 SELECT src_thrift.lint[0], src_thrift.lstring['abc']
